fix search bar overflow

--- a/files/styles/app.css
+++ b/files/styles/app.css
@@ -278,7 +278,6 @@ a {
   height: 4.6rem;
   border: 2px solid var(--first-color);
   border-radius: 1rem;
-  overflow: hidden;
 }
 .search-bar__input {
   border: none;
@@ -287,6 +286,7 @@ a {
   font-family: inherit;
   padding-left: 2rem;
   outline: none;
+  background-color: transparent;
 }
 .search-bar__input::placeholder {
   color: var(--text-second-color);
@@ -312,6 +312,7 @@ a {
   justify-content: center;
   font-size: 2.3rem;
   cursor: pointer;
+  border-radius: 0 .5rem .5rem 0;
 }
 .header-top__btns {
   display: flex;
